--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
+    "method-override": "^3.0.0",
     "pg": "^8.14.1"
   }
 }
